src/test/ui/privacy/private-in-public-assoc-ty.stderr
warning: private trait `m::PrivTr` in public interface (error E0445)
  --> $DIR/private-in-public-assoc-ty.rs:15:5
   |
LL | /     pub trait PubTr {
LL | |
LL | |
LL | |
...  |
LL | |         fn infer_exist() -> Self::Exist;
LL | |     }
   | |_____^
   |
   = note: #[warn(private_in_public)] on by default
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #34537 <https://github.com/rust-lang/rust/issues/34537>

warning: private type `m::Priv` in public interface (error E0446)
  --> $DIR/private-in-public-assoc-ty.rs:15:5
   |
LL | /     pub trait PubTr {
LL | |
LL | |
LL | |
...  |
LL | |         fn infer_exist() -> Self::Exist;
LL | |     }
   | |_____^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #34537 <https://github.com/rust-lang/rust/issues/34537>

error[E0446]: private type `m::Priv` in public interface
  --> $DIR/private-in-public-assoc-ty.rs:24:9
   |
LL |     struct Priv;
   |     - `m::Priv` declared as private
...
LL |         type Alias4 = Priv;
   |         ^^^^^^^^^^^^^^^^^^^ can't leak private type

error[E0446]: private type `m::Priv` in public interface
  --> $DIR/private-in-public-assoc-ty.rs:31:9
   |
LL |     struct Priv;
   |     - `m::Priv` declared as private
...
LL |         type Alias1 = Priv;
   |         ^^^^^^^^^^^^^^^^^^^ can't leak private type

error[E0445]: private trait `m::PrivTr` in public interface
  --> $DIR/private-in-public-assoc-ty.rs:34:9
   |
LL |     trait PrivTr {}
   |     - `m::PrivTr` declared as private
...
LL |         existential type Exist: PrivTr;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ can't leak private trait

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0445, E0446.
For more information about an error, try `rustc --explain E0445`.
